--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <div class="container">
+        <h1 id="verification_heading">Verify Your Account</h1>
+        <p id="verification_subtext">Please enter the 6-digit code sent to your device.</p>
+
+        <div class="code-container">
+            <input type="text" maxlength="1" class="code" />
+            <input type="text" maxlength="1" class="code" />
+            <input type="text" maxlength="1" class="code" />
+            <input type="text" maxlength="1" class="code" />
+            <input type="text" maxlength="1" class="code" />
+            <input type="text" maxlength="1" class="code" />
+        </div>
+    </div>
+
+<script src="script.js"></script>
 </body>
-
 </html>
