--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
         <p id="verification_subtext">Please enter the 6-digit code sent to your device.</p>
 
         <div class="code-container">
-            <input type="text" maxlength="1" class="code" />
-            <input type="text" maxlength="1" class="code" />
-            <input type="text" maxlength="1" class="code" />
-            <input type="text" maxlength="1" class="code" />
-            <input type="text" maxlength="1" class="code" />
-            <input type="text" maxlength="1" class="code" />
-        </div>
+    <input id="code-1" type="text" maxlength="1" class="code" />
+    <input id="code-2" type="text" maxlength="1" class="code" />
+    <input id="code-3" type="text" maxlength="1" class="code" />
+    <input id="code-4" type="text" maxlength="1" class="code" />
+    <input id="code-5" type="text" maxlength="1" class="code" />
+    <input id="code-6" type="text" maxlength="1" class="code" />
+</div>
     </div>
 
 <script src="script.js"></script>
